#! Another attempt at nailing down random test failure